tests/baselines/reference/inferenceOfNullableObjectTypesWithCommonBase.errors.txt
tests/cases/compiler/inferenceOfNullableObjectTypesWithCommonBase.ts(10,15): error TS2345: Argument of type 'D | undefined' is not assignable to parameter of type 'B'.
  Type 'undefined' is not assignable to type 'B'.
tests/cases/compiler/inferenceOfNullableObjectTypesWithCommonBase.ts(11,27): error TS2345: Argument of type 'B' is not assignable to parameter of type 'D'.
  Property 'bar' is missing in type 'B' but required in type 'D'.


==== tests/cases/compiler/inferenceOfNullableObjectTypesWithCommonBase.ts (2 errors) ====
    function equal<T>(a: T, b: T) { }
    
    let v = null!;
    
    // Object types with common base types
    
    type B = { foo: string }
    type D = { foo: string; bar: number }
    
    equal(v as B, v as undefined | D)
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'D | undefined' is not assignable to parameter of type 'B'.
!!! error TS2345:   Type 'undefined' is not assignable to type 'B'.
    equal(v as undefined | D, v as B)
                              ~~~~~~
!!! error TS2345: Argument of type 'B' is not assignable to parameter of type 'D'.
!!! error TS2345:   Property 'bar' is missing in type 'B' but required in type 'D'.
!!! related TS2728 tests/cases/compiler/inferenceOfNullableObjectTypesWithCommonBase.ts:8:25: 'bar' is declared here.
    
    equal<undefined | B>(v as B, v as undefined | D)
    equal<undefined | B>(v as undefined | D, v as B)
    
    equal(v as B, v as undefined)
    equal(v as undefined, v as B)
    
    equal(v as B, v as D)
    equal(v as D, v as B)
    
    equal(v as B, v as B | undefined)
    equal(v as B | undefined, v as B)
    